Move to visual studio

--- a/exampletest/exampletest.csproj
+++ b/exampletest/exampletest.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
     <ProjectReference Include="..\exampleproject\exampleproject.csproj" />
@@ -7,7 +7,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net40</TargetFramework>
   </PropertyGroup>
 
 </Project>
