--- a/SafeTest.csproj
+++ b/SafeTest.csproj
@@ -1,10 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net40</TargetFramework>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
+  <ItemGroup>
+    <Compile Remove="exampleproject\**" />
+    <Compile Remove="exampletest\**" />
+    <EmbeddedResource Remove="exampleproject\**" />
+    <EmbeddedResource Remove="exampletest\**" />
+    <None Remove="exampleproject\**" />
+    <None Remove="exampletest\**" />
+  </ItemGroup>
 
 </Project>
